nix/demo/hello-aliases.yaml
# ServiceEntry to create alias names for remote services
# In cluster-b, these aliases map to cluster-a's services by DNS name
# No IP addresses needed - Istio routes via east-west gateway
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: src-hello-0
  namespace: demo
spec:
  hosts:
  - "src-hello-0.demo.svc.cluster.local"  # Alias name in cluster-b
  resolution: DNS
  location: MESH_INTERNAL
  ports:
  - number: 8080
    name: http
    protocol: HTTP
  endpoints:
  - address: "hello-0.hello.demo.svc.cluster-a.global"  # Remote service DNS
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: src-hello-1
  namespace: demo
spec:
  hosts:
  - "src-hello-1.demo.svc.cluster.local"
  resolution: DNS
  location: MESH_INTERNAL
  ports:
  - number: 8080
    name: http
    protocol: HTTP
  endpoints:
  - address: "hello-1.hello.demo.svc.cluster-a.global"
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: src-hello-2
  namespace: demo
spec:
  hosts:
  - "src-hello-2.demo.svc.cluster.local"
  resolution: DNS
  location: MESH_INTERNAL
  ports:
  - number: 8080
    name: http
    protocol: HTTP
  endpoints:
  - address: "hello-2.hello.demo.svc.cluster-a.global"
